# asciiplayer

./: .gitignore  CMakeLists.txt  README.md  build_win.bat
src/: asciivid.cpp  main.cpp
src/include/: asciiplayer.hpp
